--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gps03</string>
+    　　<string name="app_name">GPS</string>
+    　　<string name="textview_label">This is a TextView sample.</string>
 </resources>
